# flashcards

./: .env  README.md  run_be_fe.bat
api/: Cargo.toml  flashcards.db  flashcards.db-shm  flashcards.db-wal
api/src/: database.rs  lib.rs  main.rs
api/src/dto/: app_state.rs  login_payload.rs  me_response.rs  mod.rs  post.rs  register_payload.rs
api/src/dto/cards/: card.rs  cards_count.rs  mod.rs
api/src/dto/decks/: deck.rs
api/src/dto/study_history/: mod.rs
api/src/dto/user/: claims.rs  login_payload.rs  me_response.rs  mod.rs  register_payload.rs
api/src/routes/: authenticate.rs  cards.rs  decks.rs  mod.rs  posts.rs  study_history.rs
api/src/utils/: utils.rs
api/tests/: auth.rs  decks_cards.rs  save_history.rs
api/tests/common/: mod.rs
client/: Cargo.toml  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: app.rs  lib.rs  main.rs  routes.rs  tailwind.css
client/src/auth/: actions.rs  mod.rs
client/src/components/: card.rs  card_edit_modal.rs  collection_edit_modal.rs  feature_card.rs  flashcard_manager.rs  hero.rs  icon.rs  layout.rs  main_features.rs  mod.rs  my_card_collection.rs  my_cards.rs  navbar.rs  stats_summary.rs
client/src/components/cards/: card_edit_modal.rs  mod.rs  my_cards.rs
client/src/components/collections/: card_collection.rs  collection_edit_modal.rs  mod.rs  my_card_collection.rs
client/src/components/icons/: book_open_icon.rs  brain_icon.rs  download_icon.rs  folder_open_icon.rs  mod.rs  pencil_icon.rs  plus_icon.rs  trash_icon.rs
client/src/components/import_export/: import_export_component.rs  mod.rs
client/src/components/index/: hero.rs  main_features.rs  mod.rs  stats_summary.rs
client/src/components/reusable/: badge.rs  mod.rs  toast.rs  toast_provider.rs
client/src/components/study/: flashcard_progress.rs  flashcard_view.rs  flashcard_view_answer.rs  mod.rs  study_session.rs  study_setup.rs
client/src/components/study_history/: mod.rs  (+1 more)
client/src/pages/: card_collections.rs  cards.rs  dashboard.rs  game.rs  index.rs  login_page.rs  mod.rs  not_found.rs  study.rs
client/src/utils/: constants.rs  deck.rs  flashcard.rs  functions.rs  mod.rs  routes.rs
(+8 files in other folders)
