[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1", features = ["derive"] }   # ← přidat derive
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

[build-dependencies]
syn = { version = "1", features = ["full"] }       # ← ponechat kvůli sqlx-macros 0.5.x
