[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["cookie"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }

dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["clock"] }
time = "0.3"
uuid = { version = "1", features = ["v4"] }
http = "1.3.1"
tower = "0.5.2"
hyper = "1.7.0"

[build-dependencies]
syn = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
mime = "0.3"